tests/libdef_ignored_module/libdef_ignored_module.exp
Error -------------------------------------------------------------- test.js:5:2

Cannot cast `foo.bar` to string because number is incompatible with string.

Error: test.js:5
  5: (foo.bar : string); // error number ~> string
      ^^^^^^^ Cannot cast `foo.bar` to string because number [1] is incompatible with string [2].
  References:
    2:   declare var bar: number;
                          ^^^^^^ [1]: number. See lib: lib/foo.js:2
    5: (foo.bar : string); // error number ~> string
                  ^^^^^^ [2]: string


Found 1 error
